[gd_scene load_steps=3 format=3 uid="uid://dd3ctwct1tqnm"]

[ext_resource type="Script" path="res://hud.gd" id="1_l7m08"]
[ext_resource type="FontFile" uid="uid://bsprsg4oor181" path="res://Fonts/Radnika-Medium.otf" id="2_mtqog"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_l7m08")

[node name="P1Score" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.250521
anchor_top = 0.0148148
anchor_right = 0.279688
anchor_bottom = 0.125926
offset_left = 6.99939
offset_right = -6.99933
offset_bottom = -30.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_mtqog")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="P2Score" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.725
anchor_top = 0.0148148
anchor_right = 0.754167
anchor_bottom = 0.125926
offset_right = -14.0
offset_bottom = -30.0
theme_override_fonts/font = ExtResource("2_mtqog")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.257813
anchor_top = 0.257407
anchor_right = 0.749479
anchor_bottom = 0.424074
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_mtqog")
theme_override_font_sizes/font_size = 150
text = "PONGCHAMP"
metadata/_edit_use_anchors_ = true

[node name="Start" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.416667
anchor_top = 0.65463
anchor_right = 0.566667
anchor_bottom = 0.773148
offset_bottom = 6.10352e-05
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_mtqog")
theme_override_font_sizes/font_size = 100
text = "START"
metadata/_edit_use_anchors_ = true

[node name="MSGTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
